--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
         <!-- <nav class="site-nav">
-            <a class="page-link" href="http://lilianweng.github.io" target="_blank">&#x1f349; About</a>
+            <a class="page-link" href="http://tonydeep.github.io" target="_blank">&#x1f349; About</a>
         </nav> -->
         <nav class="site-nav">
             <a class="page-link" href="{{ '/contact.html' | relative_url }}">&#x1f984; Contact</a>
