--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if site.comments.disqus.shortname %}
+<!-- {% if site.comments.disqus.shortname %}
   <script>
     var disqus_config = function () {
       this.page.url = "{{ page.url | absolute_url }}";  // Replace PAGE_URL with your page's canonical URL variable
@@ -14,9 +14,9 @@
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
+ -->
 
-
-<!-- <div id="disqus_thread"></div>
+<div id="disqus_thread"></div>
 <script>
     (function() {  // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
@@ -29,4 +29,3 @@
 <noscript>
     Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
 </noscript>
- -->
