--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
             <a class="page-link" href="http://tonydeep.github.io" target="_blank">&#x1f349; About</a>
         </nav> -->
         <nav class="site-nav">
-            <a class="page-link" href="{{ '/contact.html' | relative_url }}">&#x1f984; Contact</a>
+            <a class="page-link" href="{{ '/about.html' | relative_url }}">&#x1f984; About</a>
         </nav>
         <nav class="site-nav">
             <a class="page-link" href="{{ '/FAQ.html' | relative_url }}">&#x1F64B; FAQ</a>
