--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,13 @@
             <a class="page-link" href="http://tonydeep.github.io" target="_blank">&#x1f349; About</a>
         </nav> -->
         <nav class="site-nav">
-            <a class="page-link" href="{{ '/about.html' | relative_url }}">&#x1f984; About</a>
+            <a class="page-link" href="{{ '/about.html' | relative_url }}">&#x1F403;  About</a>
         </nav>
         <nav class="site-nav">
-            <a class="page-link" href="{{ '/FAQ.html' | relative_url }}">&#x1F64B; FAQ</a>
+            <a class="page-link" href="{{ '/FAQ.html' | relative_url }}">   &#x16A01; FAQ</a>
         </nav>
         <nav class="site-nav">
-            <a class="page-link" href="{{ '/archive.html' | relative_url }}">&#x231b; Archive</a>
+            <a class="page-link" href="{{ '/archive.html' | relative_url }}">&#x1F4BC;  Archive</a>
         </nav>
 
     </div>
