--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
         <nav class="site-nav">
             <a class="page-link" href="{{ '/about.html' | relative_url }}">&#x0F13;  About</a>
         </nav>
-        <nav class="site-nav">
+<!--         <nav class="site-nav">
             <a class="page-link" href="{{ '/FAQ.html' | relative_url }}">   &#x16A01; FAQ</a>
-        </nav>
+        </nav> -->
         <nav class="site-nav">
             <a class="page-link" href="{{ '/archive.html' | relative_url }}">&#x1D4D0;  Archive</a>
         </nav>
