--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,9 @@
         {% assign default_paths = site.pages | map: "path" %}
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-        <!-- <nav class="site-nav">
-            <a class="page-link" href="http://tonydeep.github.io" target="_blank">&#x1f349; About</a>
-        </nav> -->
+        <nav class="site-nav">
+            <a class="page-link" href="https://deeplearn.org/" target="_blank">&#x1F517; DLMonitor</a>
+        </nav>
         <nav class="site-nav">
             <a class="page-link" href="{{ '/about.html' | relative_url }}">&#x0F13;  About</a>
         </nav>
